# agent-stepper

./: .gitignore  LICENSE  README.md  run_agentstepper.sh  run_agentstepper_core_only.sh  run_agentstepper_ui_only.sh
AgentStepper API/: Development.md  Todo.md  pyproject.toml
AgentStepper API/agentstepper/: demo_agent.py
AgentStepper API/agentstepper/api/: agent_core_message.py  common.py  debugger.py  git_utils.py
AgentStepper Core/: Development.md  Todo.md  default.conf  pyproject.toml
AgentStepper Core/agentstepper/: __main__.py  debugger_core.py
AgentStepper Core/agentstepper/core/: cli_utils.py  log_writer.py  prompt_helper.py  server_version.py  types.py  ui_events.py  ui_message_factory.py  ui_serializer.py
AgentStepper Core/prompts/: summarize_query_request.prompt  summarize_query_response.prompt  summarize_tool_call.prompt  summarize_tool_result.prompt
AgentStepper UI/: Development.md  Dockerfile  Todo.md  index.html  package.json  vite.config.js
AgentStepper UI/src/: App.vue  main.js  settings.scss
AgentStepper UI/src/app/: app.js  change.js  commit.js  connectionHandler.js  message.js  messageHandler.js  run.js  (+1 more)
Documents/: AgentStepperLogo.key
Documents/User Study/: Group_Assigment.xlsx  gdpr_consent.tex  user_study_informed_consent.tex
Evaluation/Agent-Debugger Integration/: Agent-Debugger Integration Changes Tabulation.md  ExecutionAgent-Agent-Integration.diff  README.md  RepairAgent-Agent-Integration.diff  SWE-Agent-Integration.diff
Evaluation/Usability and Utility User Study/: README.md  Task Responses and Grading.xlsx
(+37 files in other folders)
